updating files new

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,7 +6,7 @@
 /* logo info */
 
 #logojff {
-  position: center;
+  text-align: right;
 }
 
 /*  navbar heading tabs   */
@@ -365,9 +365,9 @@ border: 5px 5px black;
   display: flex;
   flex: start;
   align-items: center;
-  padding: 4px 0px 4px 2px;
+  padding: 2px 2px;
   list-style: none;
-  height: 60px;
+  height: 45px;
 }
 
 .nav-text a {
@@ -496,28 +496,54 @@ span {
   background-color: red;
 }
 
-.square2 {
-  display: flex;
-  width: 100px;
-  height: 100px;
-  background-color: red;
-}
-.square3 {
-  display: flex;
-  width: 100px;
-  height: 100px;
-  background-color: red;
+body {
+  font-family: "Lato", sans-serif;
 }
 
-.square text {
-  margin: auto;
-} 
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
 
 .text {
   margin: auto;
 }
 
-.foot { 
+#footer { 
    margin-top: 1rem;
    padding: 1rem; 
    text-align: center;
