--- a/src/App.css
+++ b/src/App.css
@@ -15,5 +15,43 @@
   justify-content: center;
   font-size: 3rem;
   
+}
+
+#circle {
+  float: left;
+  width: 300px;
+  height: 300px;
+  margin-top: 20px;
+  margin: 30px;
+  shape-outside: circle();
+  clip-path: circle();
+  background: lightblue;
+  text-align: right;
+}
+#circle1 {
+  float: left;
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+  shape-outside: circle();
+  clip-path: circle();
+  background: lightblue;
+  text-align: right;
+}
+
+.sidenav {
+  height: 100%;  
+  width: 25%;  
+  position: fixed; 
+  z-index: 1; 
+  top: 0; 
+  left: 0; 
+  background-color:#232323; 
+  transition: .5s ease; 
+  overflow-x: hidden; 
+  padding-top: 20px; 
+  display: flex; 
+  flex-direction: column; 
+  align-items: center;
 
 }
