--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -50,8 +50,9 @@ h1  {
   
 }
 
-img {
+.img {
   padding: 5px 5px;
+  width:100%;
 }
 
 .flipCard {
@@ -496,10 +497,6 @@ span {
   background-color: red;
 }
 
-body {
-  font-family: "Lato", sans-serif;
-}
-
 .sidenav {
   height: 100%;
   width: 0;
@@ -553,4 +550,7 @@ body {
    bottom: 0; 
    left: 0;
    width: 100%; 
+  }
+  #address p {
+    text-align: left;
   }
