--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,556 +1,38 @@
  
- * {
-  box-sizing: border-box;
-}
-
-/* logo info */
-
-#logojff {
-  text-align: right;
-}
-
-/*  navbar heading tabs   */
-
-.navbar-nav {
-   margin-bottom:30px; 
-   color: white;
-}
-
-.nav-item nav-link active {
-    color: tomato;
-    font-size: 1rem;
-    margin-top: -5em;
-
-}
-     
-.navbar-brand order-1  {
-    margin-right: 40px;
-  }
-
-div, 
-h1 #title {
-text-align: center;
-}
-
-.container,
-h1  {
-    color:grey; 
-    text-align: center;
-    font-weight: bold;
-    padding-top: 5%; 
-    padding-left: 5%;
-    padding-bottom: 1%;
-    margin-bottom: 20px;
-    margin: auto;
-
-  }
-  
-#img-pictures  {
-  margin: auto;
-  
-}
-
-.img {
-  padding: 5px 5px;
-  width:100%;
-}
-
-.flipCard {
--webkit-perspective: 800;
--ms-perspective: 800;
--moz-perspective: 800;
--o-perspective: 800;
-  width: 400px;
-  height: 200px;
-  position: relative;
-  margin: 50px auto;
-}
-.flipCard .card.flipped {
-transform:rotatey(-180deg);
--ms-transform:rotatey(-180deg); /* IE 9 */
--moz-transform:rotatey(-180deg); /* Firefox */
--webkit-transform:rotatey(-180deg); /* Safari and Chrome */
--o-transform:rotatey(-180deg); /* Opera */
-}
-.flipCard .card {
-width: 100%;
-height: 100%;
--webkit-transform-style: preserve-3d;
--webkit-transition: 0.5s;
--moz-transform-style: preserve-3d;
--moz-transition: 0.5s;
--ms-transform-style: preserve-3d;
--ms-transition: 0.5s;
--o-transform-style: preserve-3d;
--o-transition: 0.5s;
-transform-style: preserve-3d;
-transition: 0.5s;
-}
-.flipCard .card .side {
-width: 100%;
-height: 100%;
-padding: 10px;
-cursor: pointer;
-position: absolute;
-box-sizing: border-box;
-z-index: 2;
-backface-visibility: hidden;  /* W3C */
--webkit-backface-visibility: hidden; /* Safari & Chrome */
--moz-backface-visibility: hidden; /* Firefox */
--ms-backface-visibility: hidden; /* Internet Explorer */
--o-backface-visibility: hidden; /* Opera */
-box-shadow: 0 0 10px rgba(0,0,0,0.6);
-overflow: auto;
-}
-.flipCard .card .back {
-background: white;
-color: black;
-transform:rotatey(-180deg);
--ms-transform:rotatey(-180deg); /* IE 9 */
--moz-transform:rotatey(-180deg); /* Firefox */
--webkit-transform:rotatey(-180deg); /* Safari and Chrome */
--o-transform:rotatey(-180deg); /* Opera */
-}
-
-h1, 
-#speakers {
-  color:blue;
-  margin-top: 0;
-  font-weight: bold;
-  font-style: italic;
-}
-
-.flipCard  {
- flex-wrap: wrap;    
- margin: 10px; 
- border: 5px solid lightgrey;
- padding: 5px;
- width: 300px;
- height: 200px;
- background-color: white;
-}
-
- .container-container-border {
- border: 5px solid lightgrey;
- margin: 15px 15px;
- background-color: rgb(59, 59, 105);
-} 
-
- .card-title-yoga { 
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- text-align: center;
- font-style: italic;
-} 
-
-.card-title-tribal { 
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- text-align: center;
- font-style: italic;
- 
-} 
-
- .card-title-contemporary { 
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- text-align: center;
- font-style: italic;
-} 
-
-.card-title-ballet { 
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- text-align: center;
- font-style: italic;
-} 
-
- .card-title-hiphop { 
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- text-align: center;
- font-style: italic;
-} 
-
-.card-title-aerial { 
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- text-align: center;
- font-style: italic;
-} 
-
-.card-title-pilates { 
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- font-style: italic;
- text-align: center;
-} 
-
-.card-title-barre { 
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- text-align: center;
- font-style: italic;
-}  
-
-.some-page-wrapper {
-  display: flex;
-  margin: 15px;
-}
-
-/*  code for registration checkbox section  */
-
-.bs-example{
-margin: 20px; 
-font-style: italic;      
-} 
-
-legend {
-color: blue;
-font-weight: 1em;
-}
-legend, input
-.checkbox {
-margin: auto;
-}
-
-.form-line {
-padding: 20px;
-}
-
-.submit {
-font-weight: bold;
-}
-
-input{ 
-padding-right: 10px;
-}
-
-
-/*   title for classes  */
-h1,
-.title {
-  color:blue;
-  margin-top: 5px;
-  font-style: italic;
-  text-align: center;
-}
-
-body {
-  margin: 0;
-  font-family: Arial;
-}
-
-.header {
-  text-align: center;
-  padding: 32px;
-}
-
-
-.list-group-item {
-  text-align: center;
-  color: black;
-  font-weight: bold;
-  border: solid 2px black;
-}
-
-
-#container 
-iframe {
-display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}  
-
-#about {
-color: blue;
-}
-
-.container,
-row, col-md-4 {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
- .column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-} 
-
-#expert {
- color: teal;
- padding-left: 10px ;
-}
- 
-
-#card-body {
-padding: 10px 10px;
-border: 5px 5px black;
-
-}
-  
- /* Responsive layout - makes a two column-layout instead of four columns */
-
- @media screen and (max-width: 800px) {
-  .column {
-    -ms-flex: 50%;
-    flex: 50%;
-    max-width: 50%;
-  }
-} 
-
- /* Responsive layout - makes the two columns stack on top of each other instead of next to each other  */
-@media screen and (max-width: 600px) {
-  .column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
-
-
-.navbar {
-  background-color: blue;
-  height: 80px;
-  display: flex;
-  flex: start;
-  align-items: center;
-}
-
-.menu-bars {
-  margin-left: 2rem;
-  font-size: 2rem;
-  background: none;
-}
-
-.nav-menu {
-  background-color: #223cd3;
-  width: 250px;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: -100%;
-  transition: 850ms;
-}
-
-.nav-menu.active {
-  left: 0;
-  transition: 350ms;
-}
-
-.nav-text {
-  display: flex;
-  flex: start;
-  align-items: center;
-  padding: 2px 2px;
-  list-style: none;
-  height: 45px;
-}
-
-.nav-text a {
-  text-decoration: none;
-  color: #f5f5f5;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0 16px;
-  border-radius: 4px;
-}
-
-.nav-text a:hover {
-  background-color: greenyellow
-  /* background-color: #1a83ff; */
-}
-
-.nav-menu-items {
-  width: 100%;
-}
-
-.navbar-toggle {
-  background-color: blue;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  flex: start;
-  align-items: center;
-}
-
-span {
-  margin-left: 16px;
-}
-/* #container {
-  padding:50px;
-  background-color:#FFF;
-} */
-
-.circle1 {
-  
-    float: left;
-    width: 300px;
-    height: 300px;
-    margin: 20px;
-    shape-outside: circle();
-    clip-path: circle();
-    opacity: 0.5;
-    background-color: greenyellow;
-    background-image:
-      radial-gradient(
-        circle at top right,
-       blue,
-        #29d15b 60%
-      )
-
-}
-
-.text {
-  margin-top: 5px;
-  margin: auto;
-}
-
-.circle p {
-  margin: auto;
-}
-
-.circle2 {
-  float: right;
-  width: 300px;
-  height: 300px;
-  margin: 20px;
-  shape-outside: circle();
-  clip-path: circle();
-  opacity: 0.5;
-  background-color: greenyellow;
-  background-image:
-    radial-gradient(
-      circle at top right,
-     blue,
-      #29d15b 60%
-    )
-}
-
-.circle3 {
-  float: left;
-  width: 300px;
-  height: 300px;
-  margin: 20px;
-  shape-outside: circle();
-  clip-path: circle();
-  opacity: 0.5;
-  background-color: greenyellow;
-  background-image:
-    radial-gradient(
-      circle at top right,
-     blue,
-      #29d15b 60%
-    )
-
-}
-.circle4 {
-  float: right;
-  width: 300px;
-  height: 300px;
-  margin: 20px;
-  shape-outside: circle();
-  clip-path: circle();
-  opacity: 0.5;
-  background-color: greenyellow;
-  background-image:
-    radial-gradient(
-      circle at top right,
-     blue,
-      #29d15b 60%
-      
-    )
-}
-
-
-.square {
-  display: flex;
-  width: 100px;
-  height: 100px;
-  background-color: red;
-}
-
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
-.text {
-  margin: auto;
-}
-
-#footer { 
-   margin-top: 1rem;
-   padding: 1rem; 
-   text-align: center;
-   background-color: blue; 
-   color: white;
-   position: fixed; 
-   bottom: 0; 
+ body {font-family: "Lato", sans-serif;}
+
+ .sidebar {
+   height: 100%;
+   width: 170px;
+   position: fixed;
+   z-index: 1;
+   top: 0;
    left: 0;
-   width: 100%; 
-  }
-  #address p {
-    text-align: left;
-  }
+   background-color: #090cc5;
+   overflow-x: hidden;
+   opacity: .7;
+   padding-top: 16px;
+ }
+ 
+ .sidebar a {
+   padding: 30px 8px 6px 16px;
+   text-decoration: none;
+   font-size: 20px;
+   color: white;
+   display: block;
+ }
+ 
+ .sidebar a:hover {
+   color: #f1f1f1;
+ }
+ 
+ .main {
+   margin-left: 160px; /* Same as the width of the sidenav */
+   padding: 0px 10px;
+ }
+ 
+ @media screen and (max-height: 450px) {
+   .sidebar {padding-top: 15px;}
+   .sidebar a {font-size: 18px;}
+ }
+ 
